@@ -7,6 +7,6 @@ DIST duma_2_5_14.tar.gz 237777 RMD160 9e1c77ce3801a124044293215b0d7ee6692281a1 S
 DIST duma_2_5_15.tar.gz 240479 RMD160 c2d6399fb2701892b2a9113e4cb47b75d2d87f52 SHA1 f1f90620c5eff4e76316594fa3e7e5a6833b8d0d SHA256 baaf794854e3093ad1bddadbfb8ad4b220a7117d70359ee216bd59e353734e17
 EBUILD duma-2.5.13.ebuild 2654 RMD160 1345a6f09e0f0b1d38795d21ef7d3edf3392fd03 SHA1 0ff429214a31ac9ede5136ebc26dceb2c4956f1c SHA256 ae40d683952e97f3f6deecd76be0a113ed0cdc6939baae892846519d2e2c7056
 EBUILD duma-2.5.14-r1.ebuild 2682 RMD160 3e967db2c180b7f8b43b5d2b28f01c68600a8887 SHA1 e7caf0c75f24531af48fbd4072fef5d51748f2e4 SHA256 93d63e6d954ae99790e064b58e3b48cfcabaff227a57b3348e37fdc9634557bb
-EBUILD duma-2.5.15.ebuild 2589 RMD160 90a14a15c64e41bef972a51274469f7c1bee2ca2 SHA1 471b696d3941c82a4559bd2ff84f2c81c98bb909 SHA256 58851a5f9746ec5c45be83b39e9f45d3d7865f665adc51f33336e11a0da69796
-MISC ChangeLog 2765 RMD160 94be2ac7c3c623f6f7ca6c839ac45ae06565c55c SHA1 4a5b0474ba5142bd82c93d3e3cb11b63c03f89ae SHA256 a857c96d445227688e52d5326577ce3ac9297aee472d3cfde7e6256668e51604
+EBUILD duma-2.5.15-r1.ebuild 2683 RMD160 4ebdf4f08e84c1b0c4e6b0deba6a7e4d4dfd4833 SHA1 02ad0c8c6e15ae78e9df28ed6cc08c6a5231bc93 SHA256 1d4acb83c17263e78f01639be86f8b57cf266d1004bbe271113534670d9297ba
+MISC ChangeLog 2954 RMD160 53ee616dbb634738357721c06e1acf4b9c9bb28c SHA1 2b483e9d704b1fd13d4d7469aa842744eca791f1 SHA256 8e8bd488016201c318ab6d8c1d6a8a845f6251d6556f940ec1eb377f97c083b0
 MISC metadata.xml 571 RMD160 7503a42ba65123b48155aa20812e1f76165843af SHA1 57e85da85b7fcd90018216e371fed033cac76ee7 SHA256 5a422de5cb204ec5f8cc4631fb5c54721f27e929e290e9fa494bcd15351cf107
